--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "axios": "0.26.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.6",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "redux-thunk": "2.4.1"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
